1.5/_sources/modules/generated/sklearn.discriminant_analysis.LinearDiscriminantAnalysis.rst.txt
LinearDiscriminantAnalysis
==========================

.. currentmodule:: sklearn.discriminant_analysis

.. autoclass:: LinearDiscriminantAnalysis
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.discriminant_analysis.LinearDiscriminantAnalysis sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__init__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.decision_function sklearn.discriminant_analysis.LinearDiscriminantAnalysis.fit sklearn.discriminant_analysis.LinearDiscriminantAnalysis.fit_transform sklearn.discriminant_analysis.LinearDiscriminantAnalysis.get_feature_names_out sklearn.discriminant_analysis.LinearDiscriminantAnalysis.get_metadata_routing sklearn.discriminant_analysis.LinearDiscriminantAnalysis.get_params sklearn.discriminant_analysis.LinearDiscriminantAnalysis.predict sklearn.discriminant_analysis.LinearDiscriminantAnalysis.predict_log_proba sklearn.discriminant_analysis.LinearDiscriminantAnalysis.predict_proba sklearn.discriminant_analysis.LinearDiscriminantAnalysis.score sklearn.discriminant_analysis.LinearDiscriminantAnalysis.set_output sklearn.discriminant_analysis.LinearDiscriminantAnalysis.set_params sklearn.discriminant_analysis.LinearDiscriminantAnalysis.set_score_request sklearn.discriminant_analysis.LinearDiscriminantAnalysis.transform 
   :add-heading: Gallery examples
   :heading-level: -