1.7/_sources/modules/generated/sklearn.discriminant_analysis.LinearDiscriminantAnalysis.rst.txt
LinearDiscriminantAnalysis
==========================

.. currentmodule:: sklearn.discriminant_analysis

.. autoclass:: LinearDiscriminantAnalysis
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.discriminant_analysis.LinearDiscriminantAnalysis sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__delattr__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__dir__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__eq__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__format__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__ge__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__getattribute__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__getstate__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__gt__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__hash__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__init__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__init_subclass__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__le__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__lt__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__ne__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__new__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__reduce__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__reduce_ex__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__repr__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__setattr__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__setstate__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__sizeof__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__sklearn_clone__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__sklearn_tags__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__str__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis.__subclasshook__ sklearn.discriminant_analysis.LinearDiscriminantAnalysis._build_request_for_signature sklearn.discriminant_analysis.LinearDiscriminantAnalysis._get_default_requests sklearn.discriminant_analysis.LinearDiscriminantAnalysis._get_doc_link sklearn.discriminant_analysis.LinearDiscriminantAnalysis._get_metadata_request sklearn.discriminant_analysis.LinearDiscriminantAnalysis._get_param_names sklearn.discriminant_analysis.LinearDiscriminantAnalysis._get_params_html sklearn.discriminant_analysis.LinearDiscriminantAnalysis._html_repr sklearn.discriminant_analysis.LinearDiscriminantAnalysis._predict_proba_lr sklearn.discriminant_analysis.LinearDiscriminantAnalysis._repr_html_inner sklearn.discriminant_analysis.LinearDiscriminantAnalysis._repr_mimebundle_ sklearn.discriminant_analysis.LinearDiscriminantAnalysis._solve_eigen sklearn.discriminant_analysis.LinearDiscriminantAnalysis._solve_lstsq sklearn.discriminant_analysis.LinearDiscriminantAnalysis._solve_svd sklearn.discriminant_analysis.LinearDiscriminantAnalysis._validate_params sklearn.discriminant_analysis.LinearDiscriminantAnalysis.decision_function sklearn.discriminant_analysis.LinearDiscriminantAnalysis.fit sklearn.discriminant_analysis.LinearDiscriminantAnalysis.fit_transform sklearn.discriminant_analysis.LinearDiscriminantAnalysis.get_feature_names_out sklearn.discriminant_analysis.LinearDiscriminantAnalysis.get_metadata_routing sklearn.discriminant_analysis.LinearDiscriminantAnalysis.get_params sklearn.discriminant_analysis.LinearDiscriminantAnalysis.predict sklearn.discriminant_analysis.LinearDiscriminantAnalysis.predict_log_proba sklearn.discriminant_analysis.LinearDiscriminantAnalysis.predict_proba sklearn.discriminant_analysis.LinearDiscriminantAnalysis.score sklearn.discriminant_analysis.LinearDiscriminantAnalysis.set_output sklearn.discriminant_analysis.LinearDiscriminantAnalysis.set_params sklearn.discriminant_analysis.LinearDiscriminantAnalysis.set_score_request sklearn.discriminant_analysis.LinearDiscriminantAnalysis.transform 
   :add-heading: Gallery examples
   :heading-level: -